syntax = "proto3";
option java_package = "com.example.variant11app.data";
option java_multiple_files = true;

message DeveloperPreferences{
  string name = 1;
  string message = 2;
  string groupName = 3;
}