syntax = "proto3";
option java_package = "com.example.variant11app.data";
option java_multiple_files = true;

message MessagePreferences{
  string text = 1;
}